tns/app-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
      annotations:
        prometheus.io.scrape: "true"
        promtheus.io.port: "80"
    spec:
      containers:
      - name: app
        image: grafana/tns-app:9c1ab38
        imagePullPolicy: IfNotPresent
        args:
        - -log.level=debug
        - http://db
        ports:
        - containerPort: 80
