tns/db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db
  template:
    metadata:
      labels:
        name: db
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: db
        image: grafana/tns-db:9c1ab38
        imagePullPolicy: IfNotPresent
        args:
        - -log.level=debug
        ports:
        - containerPort: 80
