tns/loadgen-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen
spec:
  replicas: 1
  selector:
    matchLabels:
      name: loadgen
  template:
    metadata:
      labels:
        name: loadgen
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: loadgen
        image: grafana/tns-loadgen:9c1ab38
        imagePullPolicy: IfNotPresent
        args:
        - -log.level=debug
        - http://app
