tns/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tns
spec:
  tls:
  - hosts:
      - tns.lab.home
    secretName: tns-tls
  rules:
  - host: tns.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
